# seqera-io-metrics

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  calculate_seqera_io_usage.py  environment.yml  pyproject.toml  requirements.txt
